updates for calling an api

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -33,6 +33,11 @@
                 <strong>Form Results:</strong>
                 <div id="results"></div>
             </section>
+
+            <section>
+                <strong>Plano Temperature:</strong>
+                <div id="weather"></div>
+            </section>
         </main>
 
         <footer>
